# diverse-x-v5-mr9-submission-freeze

./: .gitignore  DIVERSE_X_V5_MR9D_EXTERNAL_SYNC_QUEUE.md  DIVERSE_X_V5_MR9D_MASTER_PLAN.md  DIVERSE_X_V5_MR9D_RUN_STATE.md  DIVERSE_X_V5_MR9D_TODO.md  README.md
submission_ready/DIVERSE-X-V5-MR9D-submission-freeze/repo/: README.md  pyproject.toml
submission_ready/DIVERSE-X-V5-MR9D-submission-freeze/repo/data/manifests/: v5_mr8c_final_external_manifest.json  v5_mr9a_tuned_baseline_fairness_manifest.json  v5_mr9b_figure_molecule_examples_manifest.json  v5_mr9c_config_appendix_manifest.json
submission_ready/DIVERSE-X-V5-MR9D-submission-freeze/repo/modal/: v5_mr8c_final_external_audit_primary.py  v5_mr9a_tuned_baseline_fairness.py  v5_mr9b_figure_molecule_examples.py
submission_ready/DIVERSE-X-V5-MR9D-submission-freeze/repo/reports/runs/: v5_mr8c_completion_audit.md  v5_mr8c_final_external_report.md  v5_mr9a_tuned_baseline_fairness_report.md  v5_mr9b_figure_molecule_examples.md  v5_mr9c_config_appendix.md
submission_ready/DIVERSE-X-V5-MR9D-submission-freeze/repo/reports/tables/: v5_mr8c_claim_boundary.csv  v5_mr8c_final_external_gate.csv  v5_mr8c_final_external_metrics.csv  v5_mr8c_final_external_rejection_curve.csv  v5_mr8c_final_external_rejection_summary.csv  v5_mr8c_final_external_summary.csv  v5_mr8c_final_external_task_status.csv  v5_mr9a_mr8c_reference_comparison.csv  v5_mr9a_tuned_baseline_config.csv  v5_mr9a_tuned_baseline_fairness_gate.csv  v5_mr9b_candidate_audit_pool.csv  (+9 more)
submission_ready/DIVERSE-X-V5-MR9D-submission-freeze/repo/scripts/: v5_mr8b_preregistration.py  v5_mr9c_config_appendix.py
(+33 files in other folders)
